--- a/Grader/Grader/Shared/NavMenu.razor
+++ b/Grader/Grader/Shared/NavMenu.razor
@@ -14,16 +14,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-@*        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="UpdateGrades">
+                <span class="oi oi-plus" aria-hidden="true"></span> Update Grades
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>*@
     </nav>
 </div>
 
