--- a/Grader/Grader/Pages/Error.cshtml
+++ b/Grader/Grader/Pages/Error.cshtml
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="content px-4">
             <h1 class="text-danger">Error.</h1>
-            <h2 class="text-danger">An error occurred while processing your request.</h2>
+            <h2 class="text-danger">Congratulations! You have encountered an ERROR! <br /> Now, be a good little junior dev and get to fixing!</h2>
 
             @if (Model.ShowRequestId)
             {
