--- a/Grader/Grader/Pages/UpdateGrades.razor
+++ b/Grader/Grader/Pages/UpdateGrades.razor
@@ -1,7 +1,43 @@
 ﻿@page "/UpdateGrades"
 
-<h3>UpdateGrades</h3>
+<h3>You can input your grades here.</h3>
+
+<MudText>
+We do not have access to your grades. To see your statistics, copy the table you can find in the "Evaluations" tab of your algosup account.<br />
+Your grades will be saved locally.
+</MudText>
+
+<MudTextField T="string" Label="Copy your evaluations here" Variant="Variant.Outlined" @bind-Value="@rawInput" Lines="10" />
+
+<div class="update-button-container">
+    <MudButton Variant="Variant.Filled" OnClick="editOutput">Update grades</MudButton>
+</div>
 
 @code {
+    public string rawInput = "";
 
+    public void editOutput(){
+        List<string> explodedInput = this.rawInput.Split("\n").ToList();
+        List<KeyValuePair<string, string>> grades = new List<KeyValuePair<string, string>>();
+
+        for (int i = 0; i < explodedInput.Count; i++)
+        {
+            if (DateTime.TryParse(explodedInput[i], out DateTime val) == true){
+                grades.Add(new KeyValuePair<string, string>( explodedInput[i + 1], explodedInput[i + 2] ));
+            }
+        }
+
+        var output = Newtonsoft.Json.JsonConvert.SerializeObject(grades);
+
+        System.IO.File.WriteAllText("data/Grades.json", output);
+
+        Snackbar.Add($"Found {grades.Count} grades. Grades has been saved.", Severity.Success);
+    }
 }
+
+<style>
+    .update-button-container{
+        text-align: right;
+        padding: 10px;
+    }
+</style>
