--- a/Grader/Grader/Pages/_Layout.cshtml
+++ b/Grader/Grader/Pages/_Layout.cshtml
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Grader.styles.css" rel="stylesheet" />
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -18,15 +22,17 @@
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
+            Congratulations! You have encountered an ERROR! <br /> Now, be a good little junior dev and get to fixing!
         </environment>
         <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
+            See browser dev tools for details.
         </environment>
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
 </body>
 </html>
