--- a/Grader/Grader/Shared/MainLayout.razor
+++ b/Grader/Grader/Shared/MainLayout.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>Grader</PageTitle>
 
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
