--- a/Grader/Grader/Components/MainChartComponent.razor
+++ b/Grader/Grader/Components/MainChartComponent.razor
@@ -1,4 +1,4 @@
-﻿<h3>General Grade disposition</h3>
+﻿<h3>Average Grade disposition</h3>
 
 <MudChart ChartType="ChartType.Donut" LegendPosition="Position.Top" Width="300px" Height="300px"
           InputData="@mainData" InputLabels="@mainLabels">
