--- a/Grader/Grader/Components/GradeListComponent.razor
+++ b/Grader/Grader/Components/GradeListComponent.razor
@@ -1,5 +1,8 @@
-﻿<h3>GradeListComponent</h3>
+﻿<h3>Yout grades</h3>
+
+
 
 @code {
-
+    [Parameter]
+    public List<Activity> activities { get; set; }
 }
