--- a/Grader/Grader/Pages/Index.razor
+++ b/Grader/Grader/Pages/Index.razor
@@ -16,6 +16,11 @@
 </div>
 
 
+<hr />
+<h3>Grades overview</h3>
+
+<GradeListComponent activities="@activities"></GradeListComponent>
+
 @code {
     public string waitingMessage = "Loading, please wait..";
 
