--- a/Grader/Grader/Pages/Index.razor
+++ b/Grader/Grader/Pages/Index.razor
@@ -27,7 +27,7 @@
     public string activitiesPath = "data/Activities.json";
     public string gradesPath = "data/Grades.json";
 
-    private List<Activity> activities;
+    private List<Activity> activities = new List<Activity>();
     private List<Category> selectedCategories = new List<Category>();
 
     protected override async Task OnInitializedAsync()
